@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-18T00:54:14Z",
+  "timestamp" : "2024-05-18T08:13:41Z",
   "count_outdated" : 1110,
   "uniques_outdated" : 645,
-  "count" : 1124,
-  "uniques" : 657,
+  "count" : 1125,
+  "uniques" : 658,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
