@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 5,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
